--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "![Badge for GitHub commit activity](https://img.shields.io/github/commit-activity/w/jazminejose/notetaker?style=for-the-badge)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,14 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
     "uuidv4": "^6.2.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jazminejose/notetaker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/jazminejose/notetaker/issues"
+  },
+  "homepage": "https://github.com/jazminejose/notetaker#readme"
 }
